--- a/pom.xml
+++ b/pom.xml
@@ -20,11 +20,6 @@
             <version>3.7.2</version>
         </dependency>
         <dependency>
-            <groupId>com.github.koraktor</groupId>
-            <artifactId>steam-condenser</artifactId>
-            <version>1.3.8</version>
-        </dependency>
-        <dependency>
             <!-- jsoup HTML parser library @ http://jsoup.org/ -->
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
@@ -34,6 +29,13 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20140107</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.koraktor</groupId>
+            <artifactId>steam-condenser</artifactId>
+            <version>1.3.91</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/steam-condenser.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
