--- a/pom.xml
+++ b/pom.xml
@@ -42,5 +42,11 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/steam-condenser.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
